--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pull_refresh">Oops, could not get posts, pull to refresh</string>
+    <string name="go_back">Go Back</string>
 </resources>
